[gd_scene load_steps=2 format=3 uid="uid://b5oftq1eifi0s"]

[ext_resource type="Script" uid="uid://cvfbqq8b2yrwm" path="res://scripts/MainMenu.gd" id="1_6qrxy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qrxy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "NODE RUNNER"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -90.0
offset_right = 150.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "NEXUS EDITION"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "START GAME"

[node name="InstructionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "HOW TO PLAY"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "QUIT"

[node name="InstructionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionsText" type="RichTextLabel" parent="InstructionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center][b]NODE RUNNER - NEXUS EDITION[/b]

[color=cyan]OBJECTIVE:[/color]
Collect compute shards to power Nexus Nodes and activate the network!

[color=cyan]CONTROLS:[/color]
• WASD / Arrow Keys - Move
• Space / W / Up - Jump
• E - Interact with Nexus Nodes

[color=cyan]GAMEPLAY:[/color]
• Collect glowing shards scattered across each level
• When you have enough shards, approach a Nexus Node
• Solve the pattern-matching puzzle to activate the node
• Complete all nodes to progress to the next level

[color=cyan]PUZZLES:[/color]
Match the binary pattern shown at the top by clicking the buttons below. You have limited time, so think fast!

Good luck, and welcome to the Nexus network![/center]"

[node name="BackButton" type="Button" parent="InstructionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 150.0
offset_right = 50.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
